# Online-Toxicity-Detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  check_python37.sh  environment_linux.yml  environment_ubuntu.yml  environment_win.yml  pipreq.txt  pull_request_template.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
Frontend/: testFlask.py
Frontend/Sources/webpages/: responsive.html
Frontend/templates/: index.html
Org/Project1/Meetings/20200510_Kickoff/: background.tif  powerpoint.pptx
Org/Project1/Meetings/20200516_Ideas/: ~$powerpoint.pptx
apollo/Fb_Scraper/: credentials.json  extract_comments.py  fb_scrapper.py  profiles_urls.json
apollo/Frontend/: README.md  app.py  mIlXQPxKwg8_0f9295c0-a331-11ea-93e5-0068ebe8b881.csv  mIlXQPxKwg8_be24b8e8-a331-11ea-8132-0068ebe8b881.csv
apollo/Frontend/static/css/: style.css
apollo/Frontend/templates/: about.html  index.html
apollo/Scraper/: LinkParser.py  comments.json  config.py  download_comments.py  extract.py  helper.py  youtubeScraper.py
apollo/Scraper/instagram_scraper/: __init__.py  app.py
apollo/inference/: inference.py
apollo/instagram_scraper/: app.py  config.py
downloads/: 1ADnTiQ8Pko_0.5_50.csv  mIlXQPxKwg8_0.5_10.csv  mIlXQPxKwg8_0.5_20.csv  mIlXQPxKwg8_0.5_30.csv  mIlXQPxKwg8_0.5_50.csv  mIlXQPxKwg8_0.5_70.csv
org/Presentation/: powerpoint.pptx
org/Project1/Meetings/20200516_Ideas/: powerpoint.pptx
org/Voting/: Votes.pptx  Voting.xlsx
tests/: test_dummy.py
