[tool.poetry]
name = "panini"
version = "0.1.0"
description = "Panini is a language processing toolkit for Indian languages."
authors = ["Ayushman Dash <dash.ayushman.99@gmail.com>", "Bhupen Chauhan", "Kumar Shridhar"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = "^2.8.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
coverage = "^5.1"
requirements-parser = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
